--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-GHOST_API_URL=https://eleventy.ghost.io
-GHOST_CONTENT_API_KEY=5a562eebab8528c44e856a3e0a
+GHOST_API_URL=https://pyxofy.com
+GHOST_CONTENT_API_KEY=9b67c260fea1c5402127e0d96c
 SITE_URL=http://localhost:8080
